fix(products): solve bug multiple references of the same entity
This error happens when the application saved the product entity, because the cascade type it was wrong.