@@ -23,6 +23,7 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class OrderServiceImplementation implements OrderUseCases {
@@ -62,7 +63,7 @@ public class OrderServiceImplementation implements OrderUseCases {
       item.setOrder(order);
       item.setUnitPrice(item.getProduct().getPrice());
       return item;
-    }).toList();
+    }).collect(Collectors.toList());
 
     order.setItems(orderItems);
 
